--- a/check9.css
+++ b/check9.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
-.feb {
+.fab {
   font-size: 32px;
+}
+
+.position {
+  position: absolute;
+  top: 100px;
+  right: 40px;
 }
