--- a/chapter9-exercise.css
+++ b/chapter9-exercise.css
@@ -3,3 +3,51 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+header {
+  width: 100%;
+  height: 50px;
+  background-color: #ff9a4b;
+}
+
+main {
+  width: 960px;
+  margin: 50px auto;
+  display: flex;
+  justify-content: center;
+}
+
+.content {
+  width: 300px;
+  background-color: #eeeeee;
+}
+
+.step {
+  height: 20px;
+  line-height: 20px;
+  color: #fff;
+  background-color: #ff9a4b;
+  position: absolute;
+}
+
+.image1 {
+  height: 150px;
+  margin: 10px 10px;
+  background-image: url(img/flow01.png);
+  background-size: cover;
+  background-position: bottom;
+}
+
+h3 {
+  margin: 15px 10px 5px 10px;
+}
+
+p {
+  margin: 5px 10px 10px 10px;
+}
+
+footer {
+  width: 100%;
+  height: 50px;
+  background-color: #aaaaaa;
+}
