--- a/chapter9-exercise.css
+++ b/chapter9-exercise.css
@@ -22,9 +22,13 @@ main {
   background-color: #eeeeee;
 }
 
+.content:nth-child(2) {
+  margin: 0 30px;
+}
+
 .step {
-  height: 20px;
-  line-height: 20px;
+  height: 25px;
+  line-height: 25px;
   color: #fff;
   background-color: #ff9a4b;
   position: absolute;
@@ -34,6 +38,22 @@ main {
   height: 150px;
   margin: 10px 10px;
   background-image: url(img/flow01.png);
+  background-size: cover;
+  background-position: bottom;
+}
+
+.image2 {
+  height: 150px;
+  margin: 10px 10px;
+  background-image: url(img/flow02.png);
+  background-size: cover;
+  background-position: bottom;
+}
+
+.image3 {
+  height: 150px;
+  margin: 10px 10px;
+  background-image: url(img/flow03.png);
   background-size: cover;
   background-position: bottom;
 }
